package co.edu.uniquindio.Proyecto_Avanzada.domain;

public enum Rol {
    ESTUDIANTE,
    ADMINISTRATIVO,
    COORDINADOR,
    ASEADOR
}
