package co.edu.uniquindio.Proyecto_Avanzada.domain;

public enum TipoSolicitud {
    REGISTRO_ASIGNATURA,
    HOMOLOGACION,
    CANCELACION_ASIGNATURA,
    SOLICITUD_CUPOS,
    CONSULTA_ACADEMICA
}
