package co.edu.uniquindio.Proyecto_Avanzada.domain.valueobjects;

public enum TipoAccion {
    CREACION,
    ASIGNACION,
    CAMBIO_ESTADO,
    CIERRE,
    CLASIFICADA
}
