@startuml
title Sistema de Triage y Gestión de Solicitudes Académicas

' =========================
' ENUMS (Value Objects)
' =========================

enum EstadoSolicitud {
  REGISTRADA
  CLASIFICADA
  EN_ATENCION
  ATENDIDA
  CERRADA
}

enum TipoAccion {
    CREACION
    ASIGNACION
    CAMBIO_ESTADO
    CIERRE
}

enum NivelPrioridad {
  ALTA
  MEDIA
  BAJA
}

enum Rol {
  ESTUDIANTE
  ADMINISTRATIVO
  COORDINADOR
}

enum TipoSolicitud {
    REGISTRO_ASIGNATURA
    HOMOLOGACION
    CANCELACION_ASIGNATURA
    SOLICITUD_CUPOS
    CONSULTA_ACADEMICA
}

' =========================
' ENTIDADES
' =========================

class Usuario {
  
  +nombre: String
  +identificacion: String
  +correo: String
  +activo: Boolean

  +estaActivo(): boolean
  +tieneRol(rol: Rol): boolean
  +puedeRegistrar(): boolean
  +puedeClasificar(): boolean
  +puedeCerrar(): boolean
}

class Solicitud {
  
  +descripcion: String
  +fechaHoraRegistro: LocalDateTime
  +justificacionPrioridad: String
  +fechaCierre: LocalDateTime

  +clasificar(tipo: TipoSolicitud): void
  +asignarPrioridad(nivel: NivelPrioridad, justificacion: String): void
  +cambiarEstado(nuevoEstado: EstadoSolicitud): void
  +asignarResponsable(responsable: Usuario): void
  +registrarAtencion(observacion: String): void
  +cerrarSolicitud(observacion: String): void
  +estaCerrada(): boolean
  -validarTransicion(nuevoEstado: EstadoSolicitud): boolean
}

class Prioridad {

  +descripcion: String

  +esAlta(): boolean
  +esMedia(): boolean
  +esBaja(): boolean
  +obtenerNivel(): NivelPrioridad
}

class CanalOrigen {
  +nombre: String

  +esCanalDigital(): boolean
  +esCanalPresencial(): boolean
}

class HistorialSolicitud {
  
  +responsable: Usuario
  +fechaHora: LocalDateTime
  +observacion: String

  +registrarAccion(
      accion: TipoAccion,
      estado: EstadoSolicitud,
      observacion: String
  ): void

  +obtenerResumen(): String
}

' =========================
' RELACIONES
' =========================

Usuario "1" -- "N" Solicitud : responsable <
Prioridad "1" -- "1" Solicitud : define <
CanalOrigen "1" -- "N" Solicitud : registra <
Solicitud "1" -- "N" HistorialSolicitud : tiene >
HistorialSolicitud "N" -- "1" Usuario : responsable >

' =========================
' RELACIONES CON ENUMS
' =========================

Solicitud ..> EstadoSolicitud : estado
Solicitud ..> TipoSolicitud : tipo
HistorialSolicitud ..> EstadoSolicitud : estado
HistorialSolicitud ..> TipoAccion : accion
Usuario ..> Rol : rol
Prioridad ..> NivelPrioridad

@enduml